--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-email/button": "0.0.10",
+    "@react-email/components": "^0.0.7",
     "@react-email/hr": "^0.0.5",
     "@react-email/html": "^0.0.4",
+    "@react-email/img": "0.0.5",
     "@react-email/render": "0.0.7",
     "@react-email/tailwind": "0.0.8",
     "@react-email/text": "^0.0.5",
